objects/Territory2.object
<CustomObject><fields>
        <fullName>Global_Region__c</fullName>
        <label>Global Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Include_In_Sales_Hierarchy__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include In Sales Hierarchy</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Master_Territory_ID__c</fullName>
        <inlineHelpText>Logical unique identifier for a Territory - used as key between systems (Salesforce, CDS, Warehouse, etc.)</inlineHelpText>
        <label>Master Territory ID</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Migration_ID__c</fullName>
        <description>Salesforce ID from staging environments to be used for migrating complete structure to high level environments</description>
        <label>Migration ID</label>
        <length>25</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Office_Channel__c</fullName>
        <label>Office Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Office_Group__c</fullName>
        <label>Office Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMER - House</fullName>
                </value>
                <value>
                    <fullName>APAC - House</fullName>
                </value>
                <value>
                    <fullName>APAC Indirect</fullName>
                </value>
                <value>
                    <fullName>EMEA Direct Non Office</fullName>
                </value>
                <value>
                    <fullName>EMEA - House</fullName>
                </value>
                <value>
                    <fullName>EMEA Indirect</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>MathWorks Australia</fullName>
                </value>
                <value>
                    <fullName>MathWorks China</fullName>
                </value>
                <value>
                    <fullName>MathWorks France</fullName>
                </value>
                <value>
                    <fullName>MathWorks Germany</fullName>
                </value>
                <value>
                    <fullName>MathWorks India</fullName>
                </value>
                <value>
                    <fullName>MathWorks Ireland</fullName>
                </value>
                <value>
                    <fullName>MathWorks Italy</fullName>
                </value>
                <value>
                    <fullName>MathWorks Japan</fullName>
                </value>
                <value>
                    <fullName>MathWorks Korea</fullName>
                </value>
                <value>
                    <fullName>MathWorks Natick</fullName>
                </value>
                <value>
                    <fullName>MathWorks Netherlands</fullName>
                </value>
                <value>
                    <fullName>MathWorks Nordic</fullName>
                </value>
                <value>
                    <fullName>MathWorks Spain</fullName>
                </value>
                <value>
                    <fullName>MathWorks Switzerland</fullName>
                </value>
                <value>
                    <fullName>MathWorks UK</fullName>
                </value>
                <value>
                    <fullName>Natick - EMEA (Direct)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AMER - House</fullName>
                </value>
                <value>
                    <fullName>APAC - House</fullName>
                </value>
                <value>
                    <fullName>China Overlay</fullName>
                </value>
                <value>
                    <fullName>Componentes Electronicas Ltda</fullName>
                </value>
                <value>
                    <fullName>EMEA Direct Non Office</fullName>
                </value>
                <value>
                    <fullName>EMEA - House</fullName>
                </value>
                <value>
                    <fullName>ETMC Exponenta Ltd</fullName>
                </value>
                <value>
                    <fullName>FIGES</fullName>
                </value>
                <value>
                    <fullName>Gamax Laboratory Solutions Kft</fullName>
                </value>
                <value>
                    <fullName>Humusoft</fullName>
                </value>
                <value>
                    <fullName>India Edu-Gov/Overlay</fullName>
                </value>
                <value>
                    <fullName>MathWorks AB (Sweden)</fullName>
                </value>
                <value>
                    <fullName>MathWorks Australia</fullName>
                </value>
                <value>
                    <fullName>MathWorks China</fullName>
                </value>
                <value>
                    <fullName>MathWorks France</fullName>
                </value>
                <value>
                    <fullName>MathWorks Germany</fullName>
                </value>
                <value>
                    <fullName>MathWorks India</fullName>
                </value>
                <value>
                    <fullName>MathWorks Ireland</fullName>
                </value>
                <value>
                    <fullName>MathWorks Italy</fullName>
                </value>
                <value>
                    <fullName>MathWorks Japan</fullName>
                </value>
                <value>
                    <fullName>MathWorks Korea</fullName>
                </value>
                <value>
                    <fullName>MathWorks Natick</fullName>
                </value>
                <value>
                    <fullName>MathWorks Netherlands</fullName>
                </value>
                <value>
                    <fullName>MathWorks Spain</fullName>
                </value>
                <value>
                    <fullName>MathWorks Switzerland</fullName>
                </value>
                <value>
                    <fullName>MathWorks UK</fullName>
                </value>
                <value>
                    <fullName>Mentor Hellas</fullName>
                </value>
                <value>
                    <fullName>MultiOn Comm/Overlay</fullName>
                </value>
                <value>
                    <fullName>MultiOn Distributor</fullName>
                </value>
                <value>
                    <fullName>Natick - AMER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMER</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Siebel_Territory_ID__c</fullName>
        <description>Territory ID from Siebel that will be used as a lookup value from the Account to assign the appropriate Salesforce Territory.</description>
        <label>Siebel Territory ID</label>
        <length>25</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Territory_Industry__c</fullName>
        <label>Territory Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AERO</fullName>
                </value>
                <value>
                    <fullName>AUTO</fullName>
                </value>
                <value>
                    <fullName>CES</fullName>
                </value>
                <value>
                    <fullName>CROSS</fullName>
                </value>
                <value>
                    <fullName>EDU</fullName>
                </value>
                <value>
                    <fullName>EP</fullName>
                </value>
                <value>
                    <fullName>FIN</fullName>
                </value>
                <value>
                    <fullName>GOV</fullName>
                </value>
                <value>
                    <fullName>IAM</fullName>
                </value>
                <value>
                    <fullName>MED</fullName>
                </value>
                <value>
                    <fullName>UNKNOWN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Territory_Sales_Group__c</fullName>
        <label>Territory Sales Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AMER - House</fullName>
                </value>
                <value>
                    <fullName>APAC - House</fullName>
                </value>
                <value>
                    <fullName>EMEA - House</fullName>
                </value>
                <value>
                    <fullName>EMEA Other</fullName>
                </value>
                <value>
                    <fullName>ETMC Exponenta Ltd</fullName>
                </value>
                <value>
                    <fullName>FIGES</fullName>
                </value>
                <value>
                    <fullName>Gamax</fullName>
                </value>
                <value>
                    <fullName>Hoare Research</fullName>
                </value>
                <value>
                    <fullName>Humusoft</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>MathWorks Australia</fullName>
                </value>
                <value>
                    <fullName>MathWorks China</fullName>
                </value>
                <value>
                    <fullName>MathWorks France</fullName>
                </value>
                <value>
                    <fullName>MathWorks Germany</fullName>
                </value>
                <value>
                    <fullName>MathWorks India</fullName>
                </value>
                <value>
                    <fullName>MathWorks Ireland</fullName>
                </value>
                <value>
                    <fullName>MathWorks Italy</fullName>
                </value>
                <value>
                    <fullName>MathWorks Japan</fullName>
                </value>
                <value>
                    <fullName>MathWorks Korea</fullName>
                </value>
                <value>
                    <fullName>MathWorks Natick</fullName>
                </value>
                <value>
                    <fullName>MathWorks Netherlands</fullName>
                </value>
                <value>
                    <fullName>MathWorks Nordic</fullName>
                </value>
                <value>
                    <fullName>MathWorks Spain</fullName>
                </value>
                <value>
                    <fullName>MathWorks Switzerland</fullName>
                </value>
                <value>
                    <fullName>MathWorks UK</fullName>
                </value>
                <value>
                    <fullName>Mentor Hellas</fullName>
                </value>
                <value>
                    <fullName>NA Comm-Aero</fullName>
                </value>
                <value>
                    <fullName>NA Comm-Aero-Geo So Cal</fullName>
                </value>
                <value>
                    <fullName>NA Comm-Auto</fullName>
                </value>
                <value>
                    <fullName>NA Comm-Auto-Geo MI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Territory_Sales_Team_Type__c</fullName>
        <label>Territory Sales Team Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blended</fullName>
                </value>
                <value>
                    <fullName>CMA</fullName>
                </value>
                <value>
                    <fullName>EDU</fullName>
                </value>
                <value>
                    <fullName>Geo</fullName>
                </value>
                <value>
                    <fullName>House</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
                <value>
                    <fullName>Named</fullName>
                </value>
                <value>
                    <fullName>NMA</fullName>
                </value>
                <value>
                    <fullName>UNKNOWN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Territory_Sector__c</fullName>
        <label>Territory Sector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Comm/Gov</fullName>
                </value>
                <value>
                    <fullName>Edu</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Unique_Master_Territory__c</fullName>
        <description>Stores Concatenation of Master Territory Id and Territory Model Id so Master Territory Id is unique within territory Model.</description>
        <label>Unique Master Territory</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>is Active</label>
        <type>Checkbox</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>false</enableFeeds><listViews>
        <fullName>Active_Territories</fullName>
        <columns>TERR_NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ROLLUP_DESCRIPTION</columns>
        <columns>is_Active__c</columns>
        <columns>TERRITORY_TYPE.NAME</columns>
        <columns>Territory_Sales_Group__c</columns>
        <columns>Master_Territory_ID__c</columns>
        <columns>Include_In_Sales_Hierarchy__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Territories</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>All_EDU_Territories</fullName>
        <columns>TERR_NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ROLLUP_DESCRIPTION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TERR_NAME</field>
            <operation>contains</operation>
            <value>EDU</value>
        </filters>
        <filters>
            <field>is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All EDU Territories</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>All_Territories</fullName>
        <columns>TERR_NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ROLLUP_DESCRIPTION</columns>
        <filterScope>Everything</filterScope>
        <label>All Territories</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Australia</fullName>
        <columns>TERR_NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ROLLUP_DESCRIPTION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TERR_NAME</field>
            <operation>startsWith</operation>
            <value>AU-</value>
        </filters>
        <filters>
            <field>is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Australia</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Benelux</fullName>
        <columns>TERR_NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ROLLUP_DESCRIPTION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TERR_NAME</field>
            <operation>startsWith</operation>
            <value>BX-</value>
        </filters>
        <filters>
            <field>is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Benelux</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>China</fullName>
        <columns>TERR_NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ROLLUP_DESCRIPTION</columns>
        <columns>Territory_Sales_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TERR_NAME</field>
            <operation>startsWith</operation>
            <value>CN-</value>
        </filters>
        <filters>
            <field>is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>China</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>France</fullName>
        <columns>TERR_NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ROLLUP_DESCRIPTION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TERR_NAME</field>
            <operation>startsWith</operation>
            <value>FR-</value>
        </filters>
        <filters>
            <field>is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>France</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Germany</fullName>
        <columns>TERR_NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ROLLUP_DESCRIPTION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TERR_NAME</field>
            <operation>startsWith</operation>
            <value>DE-</value>
        </filters>
        <filters>
            <field>is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Germany</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>India</fullName>
        <columns>TERR_NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ROLLUP_DESCRIPTION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TERR_NAME</field>
            <operation>startsWith</operation>
            <value>IN-</value>
        </filters>
        <filters>
            <field>is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>India</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Italy</fullName>
        <columns>TERR_NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ROLLUP_DESCRIPTION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TERR_NAME</field>
            <operation>startsWith</operation>
            <value>IT-</value>
        </filters>
        <filters>
            <field>is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Italy</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Japan</fullName>
        <columns>TERR_NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ROLLUP_DESCRIPTION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TERR_NAME</field>
            <operation>startsWith</operation>
            <value>JP-</value>
        </filters>
        <filters>
            <field>is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Japan</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Korea</fullName>
        <columns>TERR_NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ROLLUP_DESCRIPTION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TERR_NAME</field>
            <operation>startsWith</operation>
            <value>KR-</value>
        </filters>
        <filters>
            <field>is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Korea</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Nordic</fullName>
        <columns>TERR_NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ROLLUP_DESCRIPTION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TERR_NAME</field>
            <operation>startsWith</operation>
            <value>NRD-</value>
        </filters>
        <filters>
            <field>is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Nordic</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>North_America</fullName>
        <columns>TERR_NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ROLLUP_DESCRIPTION</columns>
        <columns>Territory_Sales_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TERR_NAME</field>
            <operation>startsWith</operation>
            <value>NA-</value>
        </filters>
        <filters>
            <field>is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>North America</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Spain</fullName>
        <columns>TERR_NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ROLLUP_DESCRIPTION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TERR_NAME</field>
            <operation>startsWith</operation>
            <value>ES-</value>
        </filters>
        <filters>
            <field>is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Spain</label>
        <language>en_US</language>
    </listViews></CustomObject>